# booking-api

./: booking.db  pyproject.toml
app/: main.py
app/api/v1/: auth.py  main_routes.py
app/core/: config.py  database.py
app/models/: user.py
app/schemas/: user.py
